--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -56,7 +56,7 @@
               </div>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="contacts.html">Контакты</a>
+              <a class="nav-link" href="contacts">Контакты</a>
             </li>
           </ul>
           <span><a href="#">🇷🇺</a> <i class="fas fa-grip-lines-vertical"></i> <a href="#">🇬🇧</a></span>
