--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load email_to_link %}
 
 {% block content %}
 
@@ -37,11 +38,11 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>+7-999-11-11111</strong></li>
+                <li><strong>{{ '+7-999-11-11111'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
-                <li><strong>geeklab@spb.ru</strong></li>
+                <li><strong>{{ 'geeklab@spb.ru'|email_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Адрес</li>
@@ -74,11 +75,11 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>+7-999-22-22222</strong></li>
+                <li><strong>{{ '+7-999-22-22222'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
-                <li><strong>geeklab@kz.ru</strong></li>
+                <li><strong>{{ 'geeklab@kz.ru'|email_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Адрес</li>
@@ -109,11 +110,11 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>+7-999-33-33333</strong></li>
+                <li><strong>{{ '+7-999-33-33333'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
-                <li><strong>geeklab@msk.ru</strong></li>
+                <li><strong>{{ 'geeklab@msk.ru'|email_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Адрес</li>
