Edited custom template for phone

--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -38,7 +38,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+7-999-11-11111'|phone_to_link }}</strong></li>
+                <li><strong>{{ '+79991111111'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
@@ -75,7 +75,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+7-999-22-22222'|phone_to_link }}</strong></li>
+                <li><strong>{{ '+79992222222'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
@@ -110,7 +110,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+7-999-33-33333'|phone_to_link }}</strong></li>
+                <li><strong>{{ '+79993333333'|phone_to_link }}</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
