--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -12,6 +12,18 @@
       </div>
     {% endif %}
 
+    <div class="card my-2">
+      <div class="card-body">
+        <p class="card-text">
+          На странице новостей создать отдельную карточку, в которой бы
+          некоторые слова являлись ссылкой с GET-параметром, при обработке
+          которой на стороне сервера производилось бы
+          <a href="https://yandex.ru/search/?text=%D0%B0%D0%B2%D1%82%D0%BE%D0%BC%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5+%D0%BF%D0%B5%D1%80%D0%B5%D0%BD%D0%B0%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5">автоматическое перенаправление</a>
+          на любую поисковую систему с запросом из этого параметра.
+        </p>
+      </div>
+    </div>
+
     <div class="row">
 
       <div class="col-lg-8">
