--- a/mainapp/templates/mainapp/courses_detail.html
+++ b/mainapp/templates/mainapp/courses_detail.html
@@ -58,34 +58,36 @@
   <div class="accordion" id="accordionLessons">
 
     {% for item in lessons %}
-      <div class="card">
-        <div class="card-header" id="headLessonPk{{ item.pk }}">
-          <h2 class="mb-0">
-            <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-              data-target="#collapse{{ item.pk }}" aria-expanded="true" aria-controls="collapse{{ item.pk }}">
-              {{ item.course.name }} - {{ item.title }}
-            </button>
-          </h2>
-        </div>
+      {% if item.deleted is False %}
+        <div class="card">
+          <div class="card-header" id="headLessonPk{{ item.pk }}">
+            <h2 class="mb-0">
+              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
+                data-target="#collapse{{ item.pk }}" aria-expanded="true" aria-controls="collapse{{ item.pk }}">
+                {{ item.course.name }} - {{ item.title }}
+              </button>
+            </h2>
+          </div>
 
-        <div id="collapse{{ item.pk }}" class="collapse" aria-labelledby="headLessonPk{{ item.pk }}"
-          data-parent="#accordionLessons">
-          <div class="card-body">
-            <div class="row justify-content-center">
-              <div class="col-12 text-center">
-                <img src="{% static 'img/no_image.svg' %}" width="250px">
-              </div>
-              <div class="col-12">
-                {% if item.description_as_markdown %}
-                  {{ item.description|markdownify }}
-                {% else %}
-                  {{ item.description }}
-                {% endif %}
+          <div id="collapse{{ item.pk }}" class="collapse" aria-labelledby="headLessonPk{{ item.pk }}"
+            data-parent="#accordionLessons">
+            <div class="card-body">
+              <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                  <img src="{% static 'img/no_image.svg' %}" width="250px">
+                </div>
+                <div class="col-12">
+                  {% if item.description_as_markdown %}
+                    {{ item.description|markdownify }}
+                  {% else %}
+                    {{ item.description }}
+                  {% endif %}
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      {% endif %}
     {% endfor %}
 
   </div>
