lesson_6 Added: Feedbacks with AJAX and link for favicon.ico (into templates/base.html)

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
         Welcome to Braniac!
       {% endblock title %}
     </title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   </head>
 
   <body>
