--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load email_to_link %}
+{% load email_to_link crispy_forms_tags %}
 
 {% block content %}
 
@@ -38,7 +38,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+79991111111'|phone_to_link }}</strong></li>
+                <li><strong>+7-999-11-11111</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
@@ -75,7 +75,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+79992222222'|phone_to_link }}</strong></li>
+                <li><strong>+7-999-22-22222</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
@@ -110,7 +110,7 @@
             <p class="card-text">
               <ul class="list-unstyled">
                 <li>Телефон</li>
-                <li><strong>{{ '+79993333333'|phone_to_link }}</strong></li>
+                <li><strong>+7-999-33-33333</strong></li>
               </ul>
               <ul class="list-unstyled">
                 <li>Email</li>
@@ -127,5 +127,16 @@
 
     </div>
   </p>
+
+  {% if form %}
+    <p>
+      <h3>Отправить сообщение в техподдержку</h3>
+      <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-primary btn-block">Отаправить</button>
+      </form>
+    </p>
+  {% endif %}
 
 {% endblock content %}
